# the-machines-of-god

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.cursor/rules/: pygame.mdc
data/: config.json  save_data.json
data/levels/: level1.json
docs/: linting_guide.md  typing_guide.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectRoadmap.md  projectbrief.md  systemPatterns.md  techContext.md
src/: main.py
src/engine/: __init__.py  game.py  state.py  visual.py
src/engine/managers/: __init__.py  collectible_manager.py  collision_manager.py  enemy_manager.py  level_manager.py  ui_manager.py  wave_manager.py
src/engine/states/: __init__.py  base_state.py  menu_state.py  playing_state.py  shop_state.py
src/entities/: __init__.py  collectible.py  enemy.py  player.py
src/states/: __init__.py
src/ui/: __init__.py
src/utils/: __init__.py  config.py  logger.py  resource.py
