[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "machines-of-god"
version = "0.1.0"
description = "A vertical scrolling shoot 'em up game inspired by classics like Sky Force"
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pygame = ">=2.6.1"
numpy = ">=1.22.0"
pre-commit = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
ruff = ">=0.11.7"
mypy = ">=1.15.0"
black = ">=25.1.0"
isort = ">=6.0.1"
pre-commit = ">=3.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Enable pycodestyle (E), Pyflakes (F), isort (I), 
# and a subset of the mccabe (C90) rules
select = ["E", "F", "I", "C90"]
ignore = []

# Allow lines to be as long as 100 characters
line-length = 100

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Target Python 3.12
target-version = "py312"

[tool.ruff.mccabe]
# Flag functions with a complexity higher than 15
max-complexity = 15

[tool.ruff.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# For a new project, eventually turn these on:
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "pygame.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygame.sprite"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "math"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100 